--- a/index.html
+++ b/index.html
@@ -71,35 +71,35 @@
     <main>
 
       <!-- sezione loghi -->
-      <section class="loghi">
+      <section id="loghi" class="text-center">
         <div class="container-fluid">
 
           <div class="row">
             <div class="col-xs-12">
-
+              <h4>INNOVATIVE BUSINESS TRUST DIGITALOCEAN</h4>
             </div>
 
             <div class="col-xs-6">
-
+              <img src="img/logo-docker.svg" alt="">
             </div>
             <div class="col-xs-6">
-
+              <img src="img/logo-gitlab.svg" alt="">
             </div>
             <div class="col-xs-6">
-
+              <img src="img/logo-slack.svg" alt="">
             </div>
             <div class="col-xs-6">
-
+              <img src="img/logo-hashicorp.svg" alt="">
             </div>
             <div class="col-xs-6">
-
+              <img src="img/logo-wework.svg" alt="">
             </div>
             <div class="col-xs-6">
-
+              <img src="img/logo-splunk.svg" alt="">
             </div>
 
             <div class="col-xs-12">
-
+              <a href="#">View customers stories &gt;</a>
             </div>
 
           </div>
@@ -107,7 +107,7 @@
       </section>
 
       <!-- sezione deploy -->
-      <section class="deploy">
+      <section id="deploy">
 
         <div class="container-fluid">
           <div class="row">
@@ -140,7 +140,7 @@
       </section>
 
       <!-- sezione design-dev -->
-      <section class="design-dev">
+      <section id="design-dev">
 
         <div class="container-fluid">
 
@@ -155,7 +155,7 @@
       </section>
 
       <!-- sezione business -->
-      <section class="business">
+      <section id="business">
         <div class="container-fluid">
           <div class="row">
             <div class="col-xs-12">
@@ -175,7 +175,7 @@
       </section>
 
       <!-- sezione service-customers -->
-      <section class="service-customers">
+      <section id="service-customers">
         <div class="container-fluid">
           <div class="row">
             <div class="col-xs-12">
@@ -190,7 +190,7 @@
       </section>
 
       <!-- sezione love -->
-      <section class="love">
+      <section id="love">
         <div class="container-fluid">
           <div class="row">
             <div class="col-xs-12">
