--- a/index.html
+++ b/index.html
@@ -111,27 +111,46 @@
 
         <div class="container-fluid">
           <div class="row">
-            <div class="col-xs-12">
-
+            <div class="col-xs-12 text-center">
+              <h2>Deploy and scale seamlessly</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
 
             <!-- lista -->
-            <div class="lista-deploy">
+            <div class="lista">
+              <ul>
+                <li><a href="#">Deploy</a></li>
+                <li><a href="#">Manage</a></li>
+                <li><a href="#">Secure</a></li>
+                <li><a href="#">Scale</a></li>
+                <li><a href="#">Monitor</a></li>
+              </ul>
 
             </div>
             <!-- lista -->
 
             <div class="col-xs-12">
-
+              <img src="img/cluster-deploy.svg" alt="">
+              <h4>Cluster deployments</h4>
+              <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI; or directly against our API</p>
             </div>
-            <div class="col-xs-12">
 
+            <div class="col-xs-12">
+              <img src="img/optimized-compute.svg" alt="">
+              <h4>Optimized computes types</h4>
+              <p>Get the compute resources you need with standard or Optimized droplets</p>
             </div>
-            <div class="col-xs-12">
 
+            <div class="col-xs-12">
+              <img src="img/one-click.svg" alt="">
+              <h4>One-click apps</h4>
+              <p>Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker and more</p>
             </div>
-            <div class="col-xs-12">
 
+            <div class="col-xs-12">
+              <img src="img/global.svg" alt="">
+              <h4>Global availability</h4>
+              <p>Deploy to any of our data center ragions around the world.</p>
             </div>
 
           </div>
@@ -140,13 +159,16 @@
       </section>
 
       <!-- sezione design-dev -->
-      <section id="design-dev">
+      <section id="design-dev" class="text-center" >
 
         <div class="container-fluid">
 
           <div class="row">
             <div class="col-xs-12">
-
+              <h1>Designed for developers</h1>
+              <p class="text-design">Build more and spend less time managin your infrastructure with our easy-to-use control apnel and API</p>
+              <img src="img/droplet.jpg" alt="">
+              <p class="text-img">Create compute servers in 55 seconds or less.</p>
             </div>
 
           </div>
@@ -157,19 +179,34 @@
       <!-- sezione business -->
       <section id="business">
         <div class="container-fluid">
+
           <div class="row">
+
             <div class="col-xs-12">
-
+              <h1>The Features your business needs</h1>
             </div>
-            <div class="col-xs-4">
 
+            <div class="col-xs-12">
+              <img src="img/pred-pricing.svg" alt="">
+              <h4></h4>
+              <p></p>
+              <a href="#"></a>
             </div>
-            <div class="col-xs-4">
 
+            <div class="col-xs-12">
+              <img src="img/world-class.svg" alt="">
+              <h4></h4>
+              <p></p>
+              <a href="#"></a>
             </div>
-            <div class="col-xs-4">
 
+            <div class="col-xs-12">
+              <img src="img/reliable-platform.svg" alt="">
+              <h4></h4>
+              <p></p>
+              <a href="#"></a>
             </div>
+
           </div>
         </div>
       </section>
