--- a/index.html
+++ b/index.html
@@ -186,25 +186,25 @@
               <h1>The Features your business needs</h1>
             </div>
 
-            <div class="col-xs-12">
+            <div class="col-xs-12 margin">
               <img src="img/pred-pricing.svg" alt="">
-              <h4></h4>
-              <p></p>
-              <a href="#"></a>
+              <h4>Predictable pricing</h4>
+              <p>Leave a complex pricing structures behind. Aòways know what you'll pay per month with a flat, industry-leading pricing structure.</p>
+              <a href="#">Pricing &gt;</a>
             </div>
 
-            <div class="col-xs-12">
+            <div class="col-xs-12 margin">
               <img src="img/world-class.svg" alt="">
-              <h4></h4>
-              <p></p>
-              <a href="#"></a>
+              <h4>World-class service</h4>
+              <p>Free round the-clock technical sypport for all customers. You'll fell the love</p>
+              <a href="#">Support &gt;</a>
             </div>
 
-            <div class="col-xs-12">
+            <div class="col-xs-12 margin">
               <img src="img/reliable-platform.svg" alt="">
-              <h4></h4>
-              <p></p>
-              <a href="#"></a>
+              <h4>Reliable platform</h4>
+              <p>More than 100,000 developers teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
+              <a href="#">Security &gt;</a>
             </div>
 
           </div>
