section service-customers, love, started-now

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/lib/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -186,7 +186,7 @@
               <h1>The Features your business needs</h1>
             </div>
 
-            <div class="col-xs-12 margin">
+            <div class="col-xs-12">
               <img src="img/pred-pricing.svg" alt="">
               <h4>Predictable pricing</h4>
               <p>Leave a complex pricing structures behind. Aòways know what you'll pay per month with a flat, industry-leading pricing structure.</p>
@@ -216,36 +216,113 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-xs-12">
-
+              <h1>Service your customers around the world from 12 regions</h1>
             </div>
+
+            <!-- tabelle -->
             <div class="col-xs-12">
+              <table class="table">
+                <tr>
+                  <th>AMS2</th>
+                  <td>Amsterdam, Netherlands</td>
+                  <td> <a href="#">Test speed &gt;</a> </td>
+                </tr>
+                <tr>
+                  <th>AMS3</th>
+                  <td>Amsterdam, Netherlands</td>
+                  <td> <a href="#">Test speed &gt;</a> </td>
+                </tr>
+                <tr>
+                  <th>BLR1</th>
+                  <td>Bangalore, India</td>
+                  <td> <a href="#">Test speed &gt;</a> </td>
+                </tr>
+                <tr>
+                  <th>FRA1</th>
+                  <td>Frankfurt German</td>
+                  <td> <a href="#">Test speed &gt;</a> </td>
+                </tr>
+                <tr>
+                  <th>LON1</th>
+                  <td>London, UK</td>
+                  <td> <a href="#">Test speed &gt;</a> </td>
+                </tr>
+                <tr>
+                  <th>NYC1</th>
+                  <td>New York, USA</td>
+                  <td> <a href="#">Test speed &gt;</a> </td>
+                </tr>
 
+              </table>
             </div>
 
+            <div class="col-xs-12">
+              <table class="table">
+                <tr>
+                  <th>AMS2</th>
+                  <td>Amsterdam, Netherlands</td>
+                  <td> <a href="#">Test speed &gt;</a> </td>
+                </tr>
+                <tr>
+                  <th>AMS3</th>
+                  <td>Amsterdam, Netherlands</td>
+                  <td> <a href="#">Test speed &gt;</a> </td>
+                </tr>
+                <tr>
+                  <th>BLR1</th>
+                  <td>Bangalore, India</td>
+                  <td> <a href="#">Test speed &gt;</a> </td>
+                </tr>
+                <tr>
+                  <th>FRA1</th>
+                  <td>Frankfurt German</td>
+                  <td> <a href="#">Test speed &gt;</a> </td>
+                </tr>
+                <tr>
+                  <th>LON1</th>
+                  <td>London, UK</td>
+                  <td> <a href="#">Test speed &gt;</a> </td>
+                </tr>
+                <tr>
+                  <th>NYC1</th>
+                  <td>New York, USA</td>
+                  <td> <a href="#">Test speed &gt;</a> </td>
+                </tr>
+
+              </table>
+            </div>
+            <!-- tabelle -->
           </div>
         </div>
       </section>
 
       <!-- sezione love -->
-      <section id="love">
+      <section id="love" class="text-center">
         <div class="container-fluid">
           <div class="row">
+
             <div class="col-xs-12">
-
+              <h1>Designed for developers</h1>
+              <img src="img/rockerbox.png" alt="">
+              <p class="text-love">&quot;We have been able to make scaling the technical infrastructure of our business cost effective and efficient.&quot;</p>
+              <strong>Rick O&apos;Toole</strong>
+              <div class="">
+                Co-founder and CTO
+              </div>
+              <a href="#">Read story &gt;</a>
             </div>
-            <div class="col-xs-10 col-xs-offset-1">
 
-            </div>
           </div>
         </div>
       </section>
 
       <!-- sezione started-now -->
-      <section class="started-now">
+      <section id="started-now" class="text-center">
         <div class="container-fluid">
           <div class="row">
             <div class="col-xs-8 col-xs-offset-2">
-
+              <h1>Get started now.</h1>
+              <a class="btn btn-default" href="#" role="button">Create your account</a>
             </div>
           </div>
         </div>
