--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="css/lib/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -327,6 +328,7 @@
           </div>
         </div>
       </section>
+
     </main>
 
     <!-- footer -->
@@ -335,18 +337,75 @@
         <div class="row">
           <div class="col-xs-12">
 
-          </div>
-          <div class="col-xs-12">
+            <img src="img/logo-small.svg" alt="">
+
+            <div class="indirizzo">
+              &copy; 2018 DigitalOcean, LLC. All rights reserved. <br>
+              <span>Proudly made in NY</span>
+            </div>
+
+            <div class="social-icon-footer">
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-facebook-square"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+            </div>
 
           </div>
           <div class="col-xs-12">
-
+            <ul>
+              <li><a href="#">Company</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Leadership</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Partner Network</a></li>
+              <li><a href="#">Referral Program</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">Legal &amp; Security</a></li>
+            </ul>
           </div>
           <div class="col-xs-12">
-
+            <ul>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">Droplets</a></li>
+              <li><a href="#">Spaces</a></li>
+              <li><a href="#">Kubernetes</a></li>
+              <li><a href="#">Load Balancers</a></li>
+              <li><a href="#">Block Storage</a></li>
+              <li><a href="#">Tools &amp; Integrations</a></li>
+              <li><a href="#">One-click Apps</a></li>
+              <li><a href="#">API</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Documentation</a></li>
+              <li><a href="#">Release Notes</a></li>
+            </ul>
           </div>
           <div class="col-xs-12">
-
+            <ul>
+              <li><a href="#">Community</a></li>
+              <li><a href="#">Tutorials</a></li>
+              <li><a href="#">Meetups</a></li>
+              <li><a href="#">Q&amp;A</a></li>
+              <li><a href="#">Write for Donation</a></li>
+              <li><a href="#">Droplets for Demons</a></li>
+              <li><a href="#">Hatch</a></li>
+              <li><a href="#">Shop Swag</a></li>
+              <li><a href="#">Research Program</a></li>
+              <li><a href="#">Current Research</a></li>
+              <li><a href="#">Open Source</a></li>
+            </ul>
+          </div>
+          <div class="col-xs-12">
+            <ul>
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Contact Support</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Network Status</a></li>
+            </ul>
           </div>
 
         </div>
