--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link rel="stylesheet" href="css/lib/bootstrap.css">
+    <link rel="stylesheet" href="css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -34,12 +34,12 @@
         <div class="container-fluid">
           <div class="row">
 
-            <div class="col-xs-12">
+            <div class="col-xs-12 col-md-8">
               <h1>The simplest cloud platform for developers &amp; teams</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
 
-            <div class="col-xs-12">
+            <div class="col-xs-12 col-md-4">
 
               <form>
                 <h2>Deploy you app in seconds.</h2>
@@ -55,8 +55,9 @@
                 </div>
 
                 <button type="button" class="btn btn-primary btn-lg btn-block">Create your account</button>
-                <button type="button" class="btn btn-default btn-lg btn-block"> <img id="google-icon" src="img/google-icon.png" alt=""><span>Sign up whit google</span></button>
+                <button type="button" class="btn btn-default btn-lg btn-block"> <img id="google-icon" src="img/google-icon.png" alt=""><span>Sign up with google</span></button>
 
+                <p>By signing up you agree to the <a href="#">The Terms of Service</a> </p>
               </form>
             </div>
 
@@ -80,22 +81,22 @@
               <h4>INNOVATIVE BUSINESS TRUST DIGITALOCEAN</h4>
             </div>
 
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-md-2">
               <img src="img/logo-docker.svg" alt="">
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-md-2">
               <img src="img/logo-gitlab.svg" alt="">
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-md-2">
               <img src="img/logo-slack.svg" alt="">
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-md-2">
               <img src="img/logo-hashicorp.svg" alt="">
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-md-2">
               <img src="img/logo-wework.svg" alt="">
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6col-md-2">
               <img src="img/logo-splunk.svg" alt="">
             </div>
 
@@ -116,45 +117,47 @@
               <h2>Deploy and scale seamlessly</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
+          </div>
 
-            <!-- lista -->
-            <div class="lista">
-              <ul>
-                <li><a href="#">Deploy</a></li>
-                <li><a href="#">Manage</a></li>
-                <li><a href="#">Secure</a></li>
-                <li><a href="#">Scale</a></li>
-                <li><a href="#">Monitor</a></li>
-              </ul>
-
-            </div>
+          <div class="row centratura">
             <!-- lista -->
 
-            <div class="col-xs-12">
-              <img src="img/cluster-deploy.svg" alt="">
-              <h4>Cluster deployments</h4>
-              <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI; or directly against our API</p>
-            </div>
+            <ul>
+              <li><a href="#">Deploy</a></li>
+              <li><a href="#">Manage</a></li>
+              <li><a href="#">Secure</a></li>
+              <li><a href="#">Scale</a></li>
+              <li><a href="#">Monitor</a></li>
+            </ul>
 
-            <div class="col-xs-12">
-              <img src="img/optimized-compute.svg" alt="">
-              <h4>Optimized computes types</h4>
-              <p>Get the compute resources you need with standard or Optimized droplets</p>
-            </div>
+            <div class="row">
+              <div class="col-xs-12 col-md-4 col-md-offset-2">
+                <img src="img/cluster-deploy.svg" alt="">
+                <h4>Cluster deployments</h4>
+                <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI; or directly against our API</p>
+              </div>
 
-            <div class="col-xs-12">
-              <img src="img/one-click.svg" alt="">
-              <h4>One-click apps</h4>
-              <p>Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker and more</p>
-            </div>
+              <div class="col-xs-12 col-md-4">
+                <img src="img/optimized-compute.svg" alt="">
+                <h4>Optimized computes types</h4>
+                <p>Get the compute resources you need with standard or Optimized droplets</p>
+              </div>
 
-            <div class="col-xs-12">
-              <img src="img/global.svg" alt="">
-              <h4>Global availability</h4>
-              <p>Deploy to any of our data center ragions around the world.</p>
+              <div class="col-xs-12 col-md-4 col-md-offset-2">
+                <img src="img/one-click.svg" alt="">
+                <h4>One-click apps</h4>
+                <p>Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker and more</p>
+              </div>
+
+              <div class="col-xs-12 col-md-4 ">
+                <img src="img/global.svg" alt="">
+                <h4>Global availability</h4>
+                <p>Deploy to any of our data center ragions around the world.</p>
+              </div>
             </div>
 
           </div>
+
         </div>
 
       </section>
@@ -187,21 +190,21 @@
               <h1>The Features your business needs</h1>
             </div>
 
-            <div class="col-xs-12">
+            <div class="col-xs-12 col-md-4 margin">
               <img src="img/pred-pricing.svg" alt="">
               <h4>Predictable pricing</h4>
               <p>Leave a complex pricing structures behind. Aòways know what you'll pay per month with a flat, industry-leading pricing structure.</p>
               <a href="#">Pricing &gt;</a>
             </div>
 
-            <div class="col-xs-12 margin">
+            <div class="col-xs-12 col-md-4 margin">
               <img src="img/world-class.svg" alt="">
               <h4>World-class service</h4>
               <p>Free round the-clock technical sypport for all customers. You'll fell the love</p>
               <a href="#">Support &gt;</a>
             </div>
 
-            <div class="col-xs-12 margin">
+            <div class="col-xs-12 col-md-4 margin">
               <img src="img/reliable-platform.svg" alt="">
               <h4>Reliable platform</h4>
               <p>More than 100,000 developers teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
@@ -353,7 +356,7 @@
             </div>
 
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-6">
             <ul>
               <li><a href="#">Company</a></li>
               <li><a href="#">About</a></li>
@@ -368,7 +371,7 @@
               <li><a href="#">Legal &amp; Security</a></li>
             </ul>
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-6">
             <ul>
               <li><a href="#">Products</a></li>
               <li><a href="#">Droplets</a></li>
@@ -384,7 +387,7 @@
               <li><a href="#">Release Notes</a></li>
             </ul>
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-6">
             <ul>
               <li><a href="#">Community</a></li>
               <li><a href="#">Tutorials</a></li>
@@ -399,7 +402,7 @@
               <li><a href="#">Open Source</a></li>
             </ul>
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-6">
             <ul>
               <li><a href="#">Support</a></li>
               <li><a href="#">Contact Support</a></li>
