--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="container-fluid">
 
           <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-8 col-xs-offset-2">
               <h1>Designed for developers</h1>
               <p class="text-design">Build more and spend less time managin your infrastructure with our easy-to-use control apnel and API</p>
               <img src="img/droplet.jpg" alt="">
@@ -374,8 +374,8 @@
         <div class="container-fluid">
           <div class="row">
 
-            <div class="col-xs-12">
-              <h1>Designed for developers</h1>
+            <div class="col-xs-8 col-xs-offset-2">
+              <h1>Development teams love DigitalOcean</h1>
               <img src="img/rockerbox.png" alt="">
               <p class="text-love">&quot;We have been able to make scaling the technical infrastructure of our business cost effective and efficient.&quot;</p>
               <strong>Rick O&apos;Toole</strong>
@@ -485,5 +485,10 @@
 
     </footer>
 
+
+
+    <!-- SCRIPT -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  	<script src="css/lib/bootstrap.min.js"></script>
   </body>
 </html>
