--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-
     <!-- SCRIPT -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   	<script src="css/lib/bootstrap.min.js"></script>
+    <!-- SCRIPT -->
   </head>
   <body>
 
@@ -244,7 +244,34 @@
             <div class="col-xs-8 col-xs-offset-2">
               <h1>Designed for developers</h1>
               <p class="text-design">Build more and spend less time managin your infrastructure with our easy-to-use control apnel and API</p>
-              <img src="img/droplet.jpg" alt="">
+
+              <!-- carousel -->
+              <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                  <div class="item active">
+                    <img  src="img/droplet.jpg" alt="">
+                  </div>
+                  <div class="item">
+                    <img  src="img/droplet.jpg" alt="">
+                  </div>
+                </div>
+
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+
+              <!-- carousel -->
+
+
               <p class="text-img">Create compute servers in 55 seconds or less.</p>
             </div>
 
@@ -379,14 +406,45 @@
           <div class="row">
 
             <div class="col-xs-8 col-xs-offset-2">
-              <h1>Development teams love DigitalOcean</h1>
-              <img src="img/rockerbox.png" alt="">
-              <p class="text-love">&quot;We have been able to make scaling the technical infrastructure of our business cost effective and efficient.&quot;</p>
-              <strong>Rick O&apos;Toole</strong>
-              <div class="">
-                Co-founder and CTO
+              <!-- carousel -->
+              <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                  <div class="item active">
+                    <h1>Development teams love DigitalOcean</h1>
+                    <img src="img/rockerbox.png" alt="">
+                    <p class="text-love">&quot;We have been able to make scaling the technical infrastructure of our business cost effective and efficient.&quot;</p>
+                    <strong>Rick O&apos;Toole</strong>
+                    <div class="">
+                      Co-founder and CTO
+                    </div>
+                    <a href="#">Read story &gt;</a>
+                  </div>
+                  <div class="item">
+                    <h1>Development teams love DigitalOcean</h1>
+                    <img src="img/rockerbox.png" alt="">
+                    <p class="text-love">&quot;We have been able to make scaling the technical infrastructure of our business cost effective and efficient.&quot;</p>
+                    <strong>Rick O&apos;Toole</strong>
+                    <div class="">
+                      Co-founder and CTO
+                    </div>
+                    <a href="#">Read story &gt;</a>
+                  </div>
+                </div>
+
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
               </div>
-              <a href="#">Read story &gt;</a>
+
+              <!-- carousel -->
             </div>
 
           </div>
